--- a/atividade3/index.html
+++ b/atividade3/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultador de região</title>
-    <link rel="stylesheet" href="/atividade2/assets/style/style.css">
+    <title>Consultador de estado</title>
+    <link rel="stylesheet" href="/atividade3/assets/style/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/atividade2/assets/js/js.js">
+    <script src="/atividade3/assets/js/js.js">
 
 
     </script>
@@ -16,7 +16,7 @@
 
 <body>
     <div id="tb-inf">
-        <h1>Consultador de região</h1>
+        <h1>Consultador de estado</h1>
         <div id="form">
             <label for="seletor">
                 Região
@@ -27,7 +27,7 @@
         </div>
         <div id="informacao">
             <span id="mensagem"></span>
-            <table id="estados">
+            <table id="cidades">
 
             </table>
 
